fix: broken path to jquery

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   </div>
 
     <script src="bower_components/xjs-framework/dist/xjs.js"></script>
-    <script src="../js/jquery-2.1.4.min.js"></script>
+    <script src="./js/jquery-2.1.4.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
