--- a/index_config.html
+++ b/index_config.html
@@ -2,23 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
     <title>keyboard Properties Editor</title>
+
+    <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+    <link rel="import" href="bower_components/xui/polymer.html">
+    <link rel="import" href="bower_components/xui/imports.html" />
+    <link rel="import" href="bower_components/xui/components/globals/globals.html" />
+
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href='css/config.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-  
-    <h1>Show/Hide keys</h1>
-    <p>
-      <input type="checkbox" name="show" id="function">Function<br>
-      <input type="checkbox" name="show" id="alpha">Alphanumeric<br>
-      <input type="checkbox" name="show" id="system">System<br>
-      <input type="checkbox" name="show" id="nav">Navigation<br>
-      <input type="checkbox" name="show" id="arrow">Arrow keys<br>
-      <input type="checkbox" name="show" id="numpad">Numpad
-      <br>
-      <input type="checkbox" name="show" id="mouse">Mouse 
-    </p>
+    <xui-section label="Show/Hide keys">
+      <xui-checkbox id="mouse"><label>Mouse</label></xui-checkbox><br>
+      <xui-checkbox id="keyboard"><label>Keyboard</xui-checkbox><br>
+      &nbsp;&nbsp;<xui-checkbox id="function"><label>Function</label></xui-checkbox><br>
+      &nbsp;&nbsp;<xui-checkbox id="alpha"><label>Alphanumeric</label></xui-checkbox><br>
+      &nbsp;&nbsp;<xui-checkbox id="system"><label>System</label></xui-checkbox><br>
+      &nbsp;&nbsp;<xui-checkbox id="nav"><label>Navigation</label></xui-checkbox><br>
+      &nbsp;&nbsp;<xui-checkbox id="arrow"><label>Arrow keys</label></xui-checkbox><br>
+      &nbsp;&nbsp;<xui-checkbox id="numpad"><label>Numpad</label></xui-checkbox><br>
+    </xui-section>
 
     <script src="bower_components/xjs-framework/dist/xjs.js"></script>
     <script>
@@ -32,13 +37,14 @@
         var currentSource;
 
         var elements = {
-          func    : document.getElementById('function'),
-          alpha   : document.getElementById('alpha'),
-          system  : document.getElementById('system'),
-          nav     : document.getElementById('nav'),
-          arrow   : document.getElementById('arrow'),
-          numpad  : document.getElementById('numpad'),
-          mouse   : document.getElementById('mouse')
+          func     : document.getElementById('function'),
+          alpha    : document.getElementById('alpha'),
+          system   : document.getElementById('system'),
+          nav      : document.getElementById('nav'),
+          arrow    : document.getElementById('arrow'),
+          numpad   : document.getElementById('numpad'),
+          mouse    : document.getElementById('mouse'),
+          keyboard : document.getElementById('keyboard')
         };
 
         var updateElements = function(config) {
