feat: initial set of changes to allow reliable resizing

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div data-section="function" draggable="true">
+    <div data-section="function">
     <div class="key glow" code="Esc">Esc</div>
     <div class="key glow" code="F1">F1</div>
     <div class="key glow" code="F2">F2</div>
@@ -25,7 +25,7 @@
     <div class="key glow" code="F12">F12</div>
   </div>
 
-  <div data-section="alpha" draggable="true">
+  <div data-section="alpha">
     <div class="key glow" code="`">`</div>
     <div class="key glow" code="1">1</div>
     <div class="key glow" code="2">2</div>
@@ -93,13 +93,13 @@
     <div class="key glow" code="RCtrl">&#8963</div>
   </div>
 
-  <div data-section="scroll" draggable="true">
+  <div data-section="scroll">
     <div class="key glow" code="PrtScr">PrtScr</div>
     <div class="key glow" code="ScrollLock">Scr</div>
     <div class="key glow" code="Pause">Pause</div>
   </div>
 
-  <div data-section="navigation" draggable="true">
+  <div data-section="navigation">
     <div class="key glow" code="Insert">Ins</div>
     <div class="key glow" code="Home">Home</div>
     <div class="key glow" code="PageUp">PgUp</div>
@@ -108,14 +108,14 @@
     <div class="key glow" code="PageDown">PgDn</div>
   </div>
 
-  <div data-section="arrow" draggable="true">
+  <div data-section="arrow">
     <div class="key glow" code="Up">&#x2191</div>
     <div class="key glow" code="Left">&#x2190</div>
     <div class="key glow" code="Down">&#x2193</div>
     <div class="key glow" code="Right">&#x2192</div>
   </div>
 
-  <div data-section="numpad" draggable="true">
+  <div data-section="numpad">
     <div class="numpad-left">
       <div class="key glow" code="NumLock">Num</div>
       <div class="key glow" code="Divide">/</div>
@@ -141,7 +141,7 @@
 
   </div>
 
-  <div id="mouse" data-section="mouse" draggable="true">
+  <div id="mouse" data-section="mouse">
     <div id="mouse_left" class="glow">L</div>
     <div id="mouse_middle" class="glow">
       <div id="mouse_scroll_up" class="glow"></div>
