feat: add draggability and (incomplete) resizability

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>keyboard</title>
     
+    <link rel="stylesheet" href="js/jquery-ui-1.11.4.custom/jquery-ui.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
