fix: E, SE, and S resizer fixes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
   </div>
 
   <div data-section="arrow">
+    <div class="key hidden">.</div>
     <div class="key glow" code="Up">&#x2191</div>
+    <div class="key hidden no-margin-right">.</div>
     <br />
     <div class="key glow" code="Left">&#x2190</div>
     <div class="key glow" code="Down">&#x2193</div>
