fix: change zoom to percentage value, fix the moving while resizing bug and resizing outside the window

--- a/index.html
+++ b/index.html
@@ -28,71 +28,77 @@
   </div>
 
   <div data-section="alpha" id="alpha">
-    <div class="key glow" code="`">`</div>
-    <div class="key glow" code="1">1</div>
-    <div class="key glow" code="2">2</div>
-    <div class="key glow" code="3">3</div>
-    <div class="key glow" code="4">4</div>
-    <div class="key glow" code="5">5</div>
-    <div class="key glow" code="6">6</div>
-    <div class="key glow" code="7">7</div>
-    <div class="key glow" code="8">8</div>
-    <div class="key glow" code="9">9</div>
-    <div class="key glow" code="0">0</div>
-    <div class="key glow" code="-">-</div>
-    <div class="key glow" code="=">=</div>
-    <div class="key glow" code="Backspace">&#x232B</div>
-    <br />
-    <div class="key glow" code="Tab">&#8677</div>
-    <div class="key glow" code="Q">Q</div>
-    <div class="key glow" code="W">W</div>
-    <div class="key glow" code="E">E</div>
-    <div class="key glow" code="R">R</div>
-    <div class="key glow" code="T">T</div>
-    <div class="key glow" code="Y">Y</div>
-    <div class="key glow" code="U">U</div>
-    <div class="key glow" code="I">I</div>
-    <div class="key glow" code="O">O</div>
-    <div class="key glow" code="P">P</div>
-    <div class="key glow" code="[">[</div>
-    <div class="key glow" code="]">]</div>
-    <div class="key glow" code="Backslash">\</div>
-    <br />
-    <div class="key glow" code="CapsLock">Caps</div>
-    <div class="key glow" code="A">A</div>
-    <div class="key glow" code="S">S</div>
-    <div class="key glow" code="D">D</div>
-    <div class="key glow" code="F">F</div>
-    <div class="key glow" code="G">G</div>
-    <div class="key glow" code="H">H</div>
-    <div class="key glow" code="J">J</div>
-    <div class="key glow" code="K">K</div>
-    <div class="key glow" code="L">L</div>
-    <div class="key glow" code=";">;</div>
-    <div class="key glow" code="Quote">'</div>
-    <div class="key glow" code="Enter">&#x23CE</div>
-    <br />
-    <div class="key glow" code="LShift">&#8679</div>
-    <div class="key glow" code="Z">Z</div>
-    <div class="key glow" code="X">X</div>
-    <div class="key glow" code="C">C</div>
-    <div class="key glow" code="V">V</div>
-    <div class="key glow" code="B">B</div>
-    <div class="key glow" code="N">N</div>
-    <div class="key glow" code="M">M</div>
-    <div class="key glow" code=",">,</div>
-    <div class="key glow" code=".">.</div>
-    <div class="key glow" code="/">/</div>
-    <div class="key glow" code="RShift">&#8679</div>
-    <br />
-    <div class="key glow" code="LCtrl">&#8963</div>
-    <div class="key glow" code="LCommand">&#x2318</div>
-    <div class="key glow" code="LAlt">&#8997</div>
-    <div class="key glow" code="Space">&nbsp;</div>
-    <div class="key glow" code="RAlt">&#8997</div>
-    <div class="key glow" code="RCommand">&#x2318</div>
-    <div class="key glow" code="Menu">&#9776</div>
-    <div class="key glow" code="RCtrl">&#8963</div>
+    <div class="alpha_flex_row">
+      <div class="key glow" code="`">`</div>
+      <div class="key glow" code="1">1</div>
+      <div class="key glow" code="2">2</div>
+      <div class="key glow" code="3">3</div>
+      <div class="key glow" code="4">4</div>
+      <div class="key glow" code="5">5</div>
+      <div class="key glow" code="6">6</div>
+      <div class="key glow" code="7">7</div>
+      <div class="key glow" code="8">8</div>
+      <div class="key glow" code="9">9</div>
+      <div class="key glow" code="0">0</div>
+      <div class="key glow" code="-">-</div>
+      <div class="key glow" code="=">=</div>
+      <div class="key glow" code="Backspace">&#x232B</div>
+    </div>
+    <div class="alpha_flex_row">
+      <div class="key glow" code="Tab">&#8677</div>
+      <div class="key glow" code="Q">Q</div>
+      <div class="key glow" code="W">W</div>
+      <div class="key glow" code="E">E</div>
+      <div class="key glow" code="R">R</div>
+      <div class="key glow" code="T">T</div>
+      <div class="key glow" code="Y">Y</div>
+      <div class="key glow" code="U">U</div>
+      <div class="key glow" code="I">I</div>
+      <div class="key glow" code="O">O</div>
+      <div class="key glow" code="P">P</div>
+      <div class="key glow" code="[">[</div>
+      <div class="key glow" code="]">]</div>
+      <div class="key glow" code="Backslash">\</div>
+    </div>
+    <div class="alpha_flex_row">
+      <div class="key glow" code="CapsLock">Caps</div>
+      <div class="key glow" code="A">A</div>
+      <div class="key glow" code="S">S</div>
+      <div class="key glow" code="D">D</div>
+      <div class="key glow" code="F">F</div>
+      <div class="key glow" code="G">G</div>
+      <div class="key glow" code="H">H</div>
+      <div class="key glow" code="J">J</div>
+      <div class="key glow" code="K">K</div>
+      <div class="key glow" code="L">L</div>
+      <div class="key glow" code=";">;</div>
+      <div class="key glow" code="Quote">'</div>
+      <div class="key glow" code="Enter">&#x23CE</div>
+    </div>
+    <div class="alpha_flex_row">
+      <div class="key glow" code="LShift">&#8679</div>
+      <div class="key glow" code="Z">Z</div>
+      <div class="key glow" code="X">X</div>
+      <div class="key glow" code="C">C</div>
+      <div class="key glow" code="V">V</div>
+      <div class="key glow" code="B">B</div>
+      <div class="key glow" code="N">N</div>
+      <div class="key glow" code="M">M</div>
+      <div class="key glow" code=",">,</div>
+      <div class="key glow" code=".">.</div>
+      <div class="key glow" code="/">/</div>
+      <div class="key glow" code="RShift">&#8679</div>
+    </div>
+    <div class="alpha_flex_row">
+      <div class="key glow" code="LCtrl">&#8963</div>
+      <div class="key glow" code="LCommand">&#x2318</div>
+      <div class="key glow" code="LAlt">&#8997</div>
+      <div class="key glow" code="Space">&nbsp;</div>
+      <div class="key glow" code="RAlt">&#8997</div>
+      <div class="key glow" code="RCommand">&#x2318</div>
+      <div class="key glow" code="Menu">&#9776</div>
+      <div class="key glow" code="RCtrl">&#8963</div>
+    </div>
   </div>
 
   <div data-section="scroll" id="scroll">
@@ -102,23 +108,29 @@
   </div>
 
   <div data-section="navigation" id="navigation">
-    <div class="key glow" code="Insert">Ins</div>
-    <div class="key glow" code="Home">Home</div>
-    <div class="key glow" code="PageUp">PgUp</div>
-    <br />
-    <div class="key glow" code="Delete">Del</div>
-    <div class="key glow" code="End">End</div>
-    <div class="key glow" code="PageDown">PgDn</div>
+    <div class="flex_row">
+      <div class="key glow" code="Insert">Ins</div>
+      <div class="key glow" code="Home">Home</div>
+      <div class="key glow" code="PageUp">PgUp</div>
+    </div>
+    <div class="flex_row">
+      <div class="key glow" code="Delete">Del</div>
+      <div class="key glow" code="End">End</div>
+      <div class="key glow" code="PageDown">PgDn</div>
+    </div>
   </div>
 
   <div data-section="arrow" id="arrow">
-    <div class="key hidden">.</div>
-    <div class="key glow" code="Up">&#x2191</div>
-    <div class="key hidden no-margin-right">.</div>
-    <br />
-    <div class="key glow" code="Left">&#x2190</div>
-    <div class="key glow" code="Down">&#x2193</div>
-    <div class="key glow" code="Right">&#x2192</div>
+    <div class="flex_row">
+      <div class="key hidden">.</div>
+      <div class="key glow" code="Up">&#x2191</div>
+      <div class="key hidden no-margin-right">.</div>
+    </div>
+    <div class="flex_row">
+      <div class="key glow" code="Left">&#x2190</div>
+      <div class="key glow" code="Down">&#x2193</div>
+      <div class="key glow" code="Right">&#x2192</div>
+    </div>
   </div>
 
   <div data-section="numpad" id="numpad">
