feat: Add a simple dropdown for changing border-color (for demo purposes)

--- a/index_config.html
+++ b/index_config.html
@@ -32,8 +32,27 @@
       &nbsp;&nbsp;<xui-checkbox id="nav"><label>Navigation</label></xui-checkbox><br>
       &nbsp;&nbsp;<xui-checkbox id="arrow"><label>Arrow keys</label></xui-checkbox><br>
       &nbsp;&nbsp;<xui-checkbox id="numpad"><label>Numpad</label></xui-checkbox><br><br>
+      <label>Border Color: </label>
+    <xui-select id="bordercolor" placeholder="Select Color">
+      <xui-option value="#FFFFFF" selected>White</xui-option>
+      <xui-option value="#000000">Black</xui-option>
+      <xui-option value="#013380">Blue</xui-option>
+      <xui-option value="#42018c">Violet</xui-option>
+      <xui-option value="#60018c">Purple</xui-option>
+      <xui-option value="#640064">RedViolet</xui-option>
+      <xui-option value="#800133">Red</xui-option>
+      <xui-option value="#800000">Scarlet</xui-option>
+      <xui-option value="#561f01">Maroon</xui-option>
+      <xui-option value="#412a01">Brown</xui-option>
+      <xui-option value="#808000">Yellow</xui-option>
+      <xui-option value="#395001">Yellow Green</xui-option>
+      <xui-option value="#0f6501">Green</xui-option>
+      <xui-option value="#01422d">BlueGreen</xui-option>
+      <xui-option value="#013e45">AquaGreen</xui-option>
+    </xui-select>
     </xui-section>
     <p>(Please grant access for the extension to execute scripts. Refresh the plugin after granting permission.)</p>
+
     <script src="bower_components/xjs-framework/dist/xjs.js"></script>
     <script src="js/config.js"></script>
   </body>
