--- a/index_config.html
+++ b/index_config.html
@@ -14,44 +14,39 @@
     <link href='css/config.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <xui-section label="Show/Hide keys">
-      <label class="desc">The Keyboard/Mouse Visualizer mimics every key and mouse press that you make.<span class="generalInfo">?</span>
+    <xui-section label="Display">
+      <label class="desc">Check the keyboard and mouse components that you want to show. <span class="generalInfo">?</span>
       <div id='generalInfo'>- Drag each item on the stage to change the position.<p>- Resize each item by positioning your mouse on the corner, then click and drag</p>
       </div>
       <br>
       </label>
-      <xui-checkbox id="mouse"><label>Mouse</label></xui-checkbox>
-      <br>
-      <xui-checkbox id="keyboard"><label>Keyboard</label></xui-checkbox>
-      <span class="info">?</span>
-      <div id='keyInfo'>Check/Uncheck Keyboard to show/hide all the sub-items under keyboard.</div>
-      <br>
-      &nbsp;&nbsp;<xui-checkbox id="function"><label>Function</label></xui-checkbox><br>
-      &nbsp;&nbsp;<xui-checkbox id="alpha"><label>Alphanumeric</label></xui-checkbox><br>
-      &nbsp;&nbsp;<xui-checkbox id="system"><label>System</label></xui-checkbox><br>
-      &nbsp;&nbsp;<xui-checkbox id="nav"><label>Navigation</label></xui-checkbox><br>
-      &nbsp;&nbsp;<xui-checkbox id="arrow"><label>Arrow keys</label></xui-checkbox><br>
-      &nbsp;&nbsp;<xui-checkbox id="numpad"><label>Numpad</label></xui-checkbox><br><br>
-      <label>Border Color: </label>
-    <xui-select id="bordercolor" placeholder="Select Color">
-      <xui-option value="#FFFFFF" selected>White</xui-option>
-      <xui-option value="#000000">Black</xui-option>
-      <xui-option value="#013380">Blue</xui-option>
-      <xui-option value="#42018c">Violet</xui-option>
-      <xui-option value="#60018c">Purple</xui-option>
-      <xui-option value="#640064">RedViolet</xui-option>
-      <xui-option value="#800133">Red</xui-option>
-      <xui-option value="#800000">Scarlet</xui-option>
-      <xui-option value="#561f01">Maroon</xui-option>
-      <xui-option value="#412a01">Brown</xui-option>
-      <xui-option value="#808000">Yellow</xui-option>
-      <xui-option value="#395001">Yellow Green</xui-option>
-      <xui-option value="#0f6501">Green</xui-option>
-      <xui-option value="#01422d">BlueGreen</xui-option>
-      <xui-option value="#013e45">AquaGreen</xui-option>
-    </xui-select>
+      <div class="checkelements">
+        <div class="elementcontainer">
+          <xui-checkbox id="keyboard"><label>Keyboard</label></xui-checkbox>
+          <span class="info">?</span>
+          <div id='keyInfo'>Check/Uncheck Keyboard to show/hide all the sub-items under keyboard.</div>
+          <br>
+          &nbsp;&nbsp;<xui-checkbox id="function"><label>Function</label></xui-checkbox><br>
+          &nbsp;&nbsp;<xui-checkbox id="alpha"><label>Alphanumeric</label></xui-checkbox><br>
+          &nbsp;&nbsp;<xui-checkbox id="system"><label>System</label></xui-checkbox><br>
+          &nbsp;&nbsp;<xui-checkbox id="nav"><label>Navigation</label></xui-checkbox><br>
+          &nbsp;&nbsp;<xui-checkbox id="arrow"><label>Arrow keys</label></xui-checkbox><br>
+          &nbsp;&nbsp;<xui-checkbox id="numpad"><label>Numpad</label></xui-checkbox><br><br>
+        </div>        
+        <div class="elementcontainer">
+          <xui-checkbox id="mouse"><label>Mouse</label></xui-checkbox>
+        </div>
+      </div>
+      <label>Glow Color </label>
+        <xui-colorpicker id="glowcolor"></xui-colorpicker>
+      <br/>
+      <br/>
+      <label>Border Color </label>
+        <xui-colorpicker id="bordercolor"></xui-colorpicker>
+      <br/>
+      <br/>
+      <label class="desc">You may need to grant access for the extension to execute scripts. Refresh the plugin after granting the permission</label>
     </xui-section>
-    <p>(Please grant access for the extension to execute scripts. Refresh the plugin after granting permission.)</p>
 
     <script src="bower_components/xjs-framework/dist/xjs.js"></script>
     <script src="js/config.js"></script>
