--- a/index_config.html
+++ b/index_config.html
@@ -15,37 +15,44 @@
   </head>
   <body>
     <xui-section label="Display">
-      <label class="desc">Check the keyboard and mouse components that you want to show. <span class="generalInfo">?</span>
-      <div id='generalInfo'>- Drag each item on the stage to change the position.<p>- Resize each item by positioning your mouse on the corner, then click and drag</p>
-      </div>
-      <br>
-      </label>
-      <div class="checkelements">
-        <div class="elementcontainer">
-          <xui-checkbox id="keyboard"><label>Keyboard</label></xui-checkbox>
-          <span class="info">?</span>
-          <div id='keyInfo'>Check/Uncheck Keyboard to show/hide all the sub-items under keyboard.</div>
-          <br>
-          &nbsp;&nbsp;<xui-checkbox id="function"><label>Function</label></xui-checkbox><br>
-          &nbsp;&nbsp;<xui-checkbox id="alpha"><label>Alphanumeric</label></xui-checkbox><br>
-          &nbsp;&nbsp;<xui-checkbox id="system"><label>System</label></xui-checkbox><br>
-          &nbsp;&nbsp;<xui-checkbox id="nav"><label>Navigation</label></xui-checkbox><br>
-          &nbsp;&nbsp;<xui-checkbox id="arrow"><label>Arrow keys</label></xui-checkbox><br>
-          &nbsp;&nbsp;<xui-checkbox id="numpad"><label>Numpad</label></xui-checkbox><br><br>
-        </div>        
-        <div class="elementcontainer">
-          <xui-checkbox id="mouse"><label>Mouse</label></xui-checkbox>
+      <div id="innersection">
+        <label class="desc">Check the keyboard and mouse components that you want to show. <div class="generalInfo">?</div>
+        <div id='generalInfo'>- Drag each item on the stage to change the position.<p>- Resize each item by positioning your mouse on the corner, then click and drag</p>
         </div>
+        <br>
+        </label>
+        <div class="checkelements">
+          <div class="elementcontainer">
+            <xui-checkbox id="keyboard"><label>Keyboard</label></xui-checkbox>
+            <div class="info">?</div>
+            <div id='keyInfo'>Check/Uncheck Keyboard to show/hide all the sub-items under keyboard.</div>
+            <br>
+            &nbsp;&nbsp;<xui-checkbox id="function"><label>Function</label></xui-checkbox><br>
+            &nbsp;&nbsp;<xui-checkbox id="alpha"><label>Alphanumeric</label></xui-checkbox><br>
+            &nbsp;&nbsp;<xui-checkbox id="system"><label>System</label></xui-checkbox><br>
+            &nbsp;&nbsp;<xui-checkbox id="nav"><label>Navigation</label></xui-checkbox><br>
+            &nbsp;&nbsp;<xui-checkbox id="arrow"><label>Arrow keys</label></xui-checkbox><br>
+            &nbsp;&nbsp;<xui-checkbox id="numpad"><label>Numpad</label></xui-checkbox><br><br>
+          </div>
+          <div class="elementcsontainer">
+            <xui-checkbox id="mouse"><label>Mouse</label></xui-checkbox>
+          </div>
+        </div>
+        <div class="xuicontainer">
+          <label>Border Color </label>
+          <xui-colorpicker id="bordercolor"></xui-colorpicker>
+        </div>
+        <div class="xuicontainer">
+          <label>Glow Color </label>
+          <xui-colorpicker id="glowcolor"></xui-colorpicker>
+        </div>
+        <div class="xuicontainer">
+          <label>Opacity </label>
+          <xui-slider id="opacitySlider" min="0" max="100"></xui-slider>
+        </div>
+        <label class="desc">You may need to grant access for the extension to execute scripts. Refresh the plugin after granting the permission</label>
+
       </div>
-      <label>Glow Color </label>
-        <xui-colorpicker id="glowcolor"></xui-colorpicker>
-      <br/>
-      <br/>
-      <label>Border Color </label>
-        <xui-colorpicker id="bordercolor"></xui-colorpicker>
-      <br/>
-      <br/>
-      <label class="desc">You may need to grant access for the extension to execute scripts. Refresh the plugin after granting the permission</label>
     </xui-section>
 
     <script src="bower_components/xjs-framework/dist/xjs.js"></script>
