fix: make the page autoreload when permission is granted

--- a/index_config.html
+++ b/index_config.html
@@ -48,7 +48,7 @@
         </div>
         <div class="xuicontainer">
           <label>Opacity </label>
-          <xui-slider id="opacitySlider" min="0" max="100"></xui-slider>
+          <xui-slider id="opacitySlider" value="100" min="0" max="100"></xui-slider>
         </div>
         <label class="desc">You may need to grant access for the extension to execute scripts. Refresh the plugin after granting the permission</label>
 
