fix: save the current size and position of the items when dragged and resized

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="key glow" code="Backspace">&#x232B</div>
     </div>
     <div class="alpha_flex_row">
-      <div class="key glow" code="Tab">&#8677</div>
+      <div class="key glow" code="Tab">Tab <span class="font_tab">&#x0029; <br/> &#x002a;</span></div>
       <div class="key glow" code="Q">Q</div>
       <div class="key glow" code="W">W</div>
       <div class="key glow" code="E">E</div>
@@ -76,7 +76,7 @@
       <div class="key glow" code="Enter">&#x23CE</div>
     </div>
     <div class="alpha_flex_row">
-      <div class="key glow" code="LShift">&#8679</div>
+      <div class="key glow" code="LShift">&#8679 Shift</div>
       <div class="key glow" code="Z">Z</div>
       <div class="key glow" code="X">X</div>
       <div class="key glow" code="C">C</div>
@@ -87,17 +87,17 @@
       <div class="key glow" code=",">,</div>
       <div class="key glow" code=".">.</div>
       <div class="key glow" code="/">/</div>
-      <div class="key glow" code="RShift">&#8679</div>
+      <div class="key glow" code="RShift">&#8679 Shift</div>
     </div>
     <div class="alpha_flex_row">
-      <div class="key glow" code="LCtrl">&#8963</div>
-      <div class="key glow" code="LCommand">&#x2318</div>
-      <div class="key glow" code="LAlt">&#8997</div>
+      <div class="key glow" code="LCtrl">Ctrl</div>
+      <div class="key glow" code="LCommand">&#xe801;</div>
+      <div class="key glow" code="LAlt">Alt</div>
       <div class="key glow" code="Space">&nbsp;</div>
-      <div class="key glow" code="RAlt">&#8997</div>
-      <div class="key glow" code="RCommand">&#x2318</div>
+      <div class="key glow" code="RAlt">Alt</div>
+      <div class="key glow" code="RCommand">&#xe801;</div>
       <div class="key glow" code="Menu">&#9776</div>
-      <div class="key glow" code="RCtrl">&#8963</div>
+      <div class="key glow" code="RCtrl">Ctrl</div>
     </div>
   </div>
 
