chore: change plugin name from Keyboard to Input Visualizer

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="xsplit:config-url" content="index_config.html" />
 
-    <title>keyboard</title>
+    <title>Input Visualizer</title>
     
     <link rel="stylesheet" href="css/jquery-ui-custom.css" />
     <link rel="stylesheet" href="css/style.css" />
