--- a/index_config.html
+++ b/index_config.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <META HTTP-EQUIV="Pragma" CONTENT="no-cache">
-    <title>keyboard Properties Editor</title>
+    <title>Input Visualizer Properties Editor</title>
 
     <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
     <link rel="import" href="bower_components/xui/polymer.html">
