fix: backspace icon is displayed as a rectangle for win 8.1 and 10 fix: unable to resize (smaller) the element by dragging on the right side; resizeable border can be hidden fix: elements can be dragged beyond the borders fix: resizeable borders are not aligned fix: function keys are not stretch correctly when adjusted to the max resolution docs: text change on granting access fix: opacity cannot be set manually

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="key glow" code="0">0</div>
           <div class="key glow" code="-">-</div>
           <div class="key glow" code="=">=</div>
-          <div class="key glow" code="Backspace">&#x232B</div>
+          <div class="key glow" code="Backspace">&#x232B;</div>
         </div>
         <div class="alpha_flex_row">
           <div class="key glow" code="Tab">Tab <span class="font_tab">&#x0029; <br/> &#x002a;</span></div>
@@ -159,12 +159,14 @@
       </div>
     </div>
     <div id="mouse" data-section="mouse">
-      <div id="mouse_left" class="glow">L</div>
-      <div id="mouse_middle" class="glow">
-        <div id="mouse_scroll_up" class="glow"></div>
-        <div id="mouse_scroll_down" class="glow"></div>
-      </div>
-      <div id="mouse_right" class="glow">R</div>
+      <div>
+        <div id="mouse_left" class="glow">L</div>
+        <div id="mouse_middle" class="glow">
+          <div id="mouse_scroll_up" class="glow"></div>
+          <div id="mouse_scroll_down" class="glow"></div>
+        </div>
+        <div id="mouse_right" class="glow">R</div>
+      </div>  
     </div>
 
     <script src="bower_components/xjs-framework/dist/xjs.js"></script>
