--- a/index_config.html
+++ b/index_config.html
@@ -59,7 +59,7 @@
           <label>Opacity </label>
           <xui-slider id="opacitySlider" value="100" min="0" max="100"></xui-slider>
         </div>
-        <label class="desc">You may need to grant access for the extension to execute scripts. Refresh the plugin after granting the permission</label>
+        <label class="desc">You may need to grant access for this plugin to listen to keyboard/mouse events. Go to Tools menu > Permissions</label>
 
       </div>
     </xui-section>
