--- a/index_config.html
+++ b/index_config.html
@@ -18,8 +18,10 @@
         <label class="desc">Check the keyboard and mouse components that you want to show.
         <div class="generaltooltip">
           <div class='generalinfo'>
+            <div>Resizing/Repositioning</div>
             <span>
-              - Drag each item on the stage to change the position.<p>- Resize each item by positioning your mouse on the corner, then click and drag</p>
+              - Drag each component of the plugin to change its position.<br>
+              - Resize each item by positioning your mouse on any of the borders, then click and drag
             </span>
           </div>
           <div class="general"><span>?</span></div>
@@ -31,19 +33,20 @@
             <xui-checkbox id="keyboard"><label>Keyboard</label></xui-checkbox>
             <div class="tooltipcont">
               <div class='keyInfo'>
+                <div>Keyboard components</div>
                 <span>Check/Uncheck Keyboard to show/hide all the sub-items under keyboard.</span>
               </div>
               <div id="info"><span>?</span></div>
             </div>
             <br>
-            &nbsp;&nbsp;<xui-checkbox id="function"><label>Function</label></xui-checkbox><br>
-            &nbsp;&nbsp;<xui-checkbox id="alpha"><label>Alphanumeric</label></xui-checkbox><br>
-            &nbsp;&nbsp;<xui-checkbox id="system"><label>System</label></xui-checkbox><br>
-            &nbsp;&nbsp;<xui-checkbox id="nav"><label>Navigation</label></xui-checkbox><br>
-            &nbsp;&nbsp;<xui-checkbox id="arrow"><label>Arrow keys</label></xui-checkbox><br>
-            &nbsp;&nbsp;<xui-checkbox id="numpad"><label>Numpad</label></xui-checkbox><br><br>
+            <xui-checkbox id="function"><label>Function</label></xui-checkbox><br>
+            <xui-checkbox id="alpha"><label>Alphanumeric</label></xui-checkbox><br>
+            <xui-checkbox id="system"><label>System</label></xui-checkbox><br>
+            <xui-checkbox id="nav"><label>Navigation</label></xui-checkbox><br>
+            <xui-checkbox id="arrow"><label>Arrow keys</label></xui-checkbox><br>
+            <xui-checkbox id="numpad"><label>Numpad</label></xui-checkbox><br><br>
           </div>
-          <div class="elementcsontainer">
+          <div class="elementcontainer">
             <xui-checkbox id="mouse"><label>Mouse</label></xui-checkbox>
           </div>
         </div>
@@ -52,14 +55,25 @@
           <xui-colorpicker id="bordercolor"></xui-colorpicker>
         </div>
         <div class="xuicontainer">
-          <label>Glow Color </label>
-          <xui-colorpicker id="glowcolor"></xui-colorpicker>
-        </div>
-        <div class="xuicontainer">
           <label>Opacity </label>
           <xui-slider id="opacitySlider" value="100" min="0" max="100"></xui-slider>
         </div>
-        <label class="desc">You may need to grant access for this plugin to listen to keyboard/mouse events. Go to Tools menu > Permissions</label>
+        <br>
+        <div class="xuicontainer">
+          <label>Glow Color </label>
+          <xui-colorpicker id="glowcolor"></xui-colorpicker>
+        </div>
+        <xui-checkbox id="lock"><label>Lock components</label></xui-checkbox>
+        <div class="generaltooltip">
+          <div class='generalinfo'>
+            <div class="generalTitle"><span>?</span></div>
+            <div>Lock components</div>
+            <span>Checking this option will disable mouse hover, repositioning and resizing of the keyboard and mouse components. Check this if you don't want to display hover effects on plugin components, especially while streaming or recording.</span>
+          </div>
+          <div class="general"><span>?</span></div>
+        </div>
+        <br>
+        <label class="desc">You may need to grant access for this plugin to listen to keyboard/mouse events. You may do so by going to Tools menu > Permissions</label>
 
       </div>
     </xui-section>
