feat: allow to read configuration to be read also as strings

--- a/index_config.html
+++ b/index_config.html
@@ -83,7 +83,7 @@
       </div>
     </xui-section>
 
-    <script src="bower_components/xjs-framework/dist/xjs.js"></script>
+    <script src="bower_components/xjs-framework/dist/xjs.min.js"></script>
     <script src="js/config.js"></script>
   </body>
 </html>
